modify for Accessiblity

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <header class=" header">
       <div class="flex ">
         <div class="flex Notification_contain">
-          <p class="notify">
+          <h1 class="notify">
             Notifications <span class="num"> 3 </span>
-          </p>
+          </h1>
 
         </div>
         <div class="mark" id="mark">
@@ -173,7 +173,7 @@
         </div>
       </div>
       <div class="wrapper read">
-        <div c class="detail flex">
+        <div class="detail flex">
           <div class="">
             <img class="avatar" src="./assets/images/avatar-anna-kim.webp" alt="">
           </div>
